[gd_scene load_steps=9 format=3 uid="uid://5vrcg40xqdwx"]

[ext_resource type="Script" path="res://scripts/big_walking_thing.gd" id="1_cgnl2"]
[ext_resource type="Texture2D" uid="uid://cqhtlqknar3dy" path="res://assets/sprites/lamp.png" id="1_lgbw5"]
[ext_resource type="AudioStream" uid="uid://cg36j00kp2r2o" path="res://assets/audio/kenney/lowFrequency_explosion_000.ogg" id="2_r4ic7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oneu4"]
radius = 250.0

[sub_resource type="Animation" id="Animation_cwtms"]
resource_name = "blink"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(4, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_opa4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cvtg3"]
resource_name = "stop_blinking"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Light:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 5),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0), Color(0, 0, 0, 0.627451)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_walking"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf2vs"]
_data = {
"RESET": SubResource("Animation_opa4p"),
"blink": SubResource("Animation_cwtms"),
"stop_blinking": SubResource("Animation_cvtg3")
}

[node name="BigWalkingThing" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource("1_cgnl2")
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oneu4")
debug_color = Color(0.701961, 0, 0, 0.419608)

[node name="Body" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
scale = Vector2(12, 12)
texture = ExtResource("1_lgbw5")

[node name="Light" type="Sprite2D" parent="."]
position = Vector2(25, -31)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_lgbw5")

[node name="StepAudioPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_r4ic7")
volume_db = 9.0
max_distance = 900.0
bus = &"World"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
autoplay = "blink"
libraries = {
"": SubResource("AnimationLibrary_hf2vs")
}
blend_times = [&"blink", &"stop_blinking", 1.0]

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
rect = Rect2(-300, -300, 600, 600)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
